fix: top align testimonals

--- a/packages/website/pages/index.scss
+++ b/packages/website/pages/index.scss
@@ -274,12 +274,12 @@
 #hero_header {
   position: relative;
   .grid {
-      justify-content: center;
-      width: 420px;
-      max-width: calc(100% - 4rem);
-      @include medium {
-        padding: 0
-      }
+    justify-content: center;
+    width: 420px;
+    max-width: calc(100% - 4rem);
+    @include medium {
+      padding: 0;
+    }
   }
   .heading {
     @include h1;
@@ -428,7 +428,8 @@
 
 #intro_2-statistics {
   padding: 0;
-  .title, .description {
+  .title,
+  .description {
     max-width: none;
   }
   @include mini {
@@ -723,6 +724,10 @@
 #section_testimonials-cards {
   position: relative;
   z-index: 1;
+
+  .card.type__C .description {
+    justify-content: unset;
+  }
 }
 
 #section_testimonials {
